{
    "name": "UserInput",
    "maps": [
        {
            "name": "Player",
            "id": "956bfb67-cebd-4f88-90ff-d39db57a6fec",
            "actions": [
                {
                    "name": "A_Button",
                    "type": "Button",
                    "id": "fcec75da-3c2d-43ef-86a4-83e683c3dd2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D_Button",
                    "type": "Button",
                    "id": "5c0b8534-8d57-4698-9307-c4aaa5417734",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse_L",
                    "type": "Button",
                    "id": "34a4a991-fa08-461b-a0d2-5edd53de4b19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse_R",
                    "type": "Button",
                    "id": "793a68b5-6ef5-4f1b-93e4-fa7607936c40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0063f5f4-f6db-4b17-b990-5718680d995c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "A_Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "242ea0b8-c1d0-4287-982d-37a0c24ff863",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "D_Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95978662-feb0-4478-b4b2-3959022087ad",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "Mouse_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd94e1c3-5e25-46e5-a012-dda649713c8f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "Mouse_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard and Mouse",
            "bindingGroup": "KeyBoard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}